--- a/src/web/Gouro.WebApp.MVC/Views/Shared/Error.cshtml
+++ b/src/web/Gouro.WebApp.MVC/Views/Shared/Error.cshtml
@@ -14,7 +14,7 @@
     {
         ViewData["Title"] = Model.Titulo;
 
-        <div>
+        <div style="text-align: center">
             <h2>@Html.Raw(Model.Mensagem)</h2>
         </div>
 
