--- a/src/web/Gouro.WebApp.MVC/Views/Identidade/Registro.cshtml
+++ b/src/web/Gouro.WebApp.MVC/Views/Identidade/Registro.cshtml
@@ -1,24 +1,38 @@
 ﻿@model Gouro.WebApp.MVC.Models.UsuarioRegistro
 
 @{
-    ViewData["Title"] = "Registro";
+    ViewData["Title"] = "Registro de novo usuário";
 }
 
-<section class="section-conten padding-y container" style="min-height: 45vh">
+<section class="section-conten padding-y container" style="min-height: 35vh">
 
     <vc:Summary></vc:Summary>
 
     <div class="card mx-auto" style="max-width: 380px; margin-top: 100px;">
 
         <div class="card-body">
-            <h4 class="card-title mb-4">Boas vindas!</h4>
+            <h4 class="card-title mb-4">Seja bem vindo!</h4>
 
             <form asp-route-returnurl="@ViewData["ReturnUrl"]" method="post">
+
+                <div class="form-group">
+                    <label asp-for="Nome"></label>
+                    <input asp-for="Nome" class="form-control" />
+                    <span asp-validation-for="Nome" class="text-danger"></span>
+                </div>
+
+                <div class="form-group">
+                    <label asp-for="Cpf"></label>
+                    <input asp-for="Cpf" class="form-control" />
+                    <span asp-validation-for="Cpf" class="text-danger"></span>
+                </div>
+
                 <div class="form-group">
                     <label asp-for="Email"></label>
                     <input asp-for="Email" class="form-control" />
                     <span asp-validation-for="Email" class="text-danger"></span>
                 </div>
+
                 <div class="form-group">
                     <label asp-for="Senha"></label>
                     <input type="password" asp-for="Senha" class="form-control" />
