Trocar IUser para IAspNetUser e colocá-lo na WebApiCore

--- a/src/web/Gouro.WebApp.MVC/Views/Shared/_LoginPartial.cshtml
+++ b/src/web/Gouro.WebApp.MVC/Views/Shared/_LoginPartial.cshtml
@@ -1,6 +1,7 @@
-﻿@using Microsoft.AspNetCore.Identity
+﻿@using Gouro.WebApi.Core.Usuario
+@using Microsoft.AspNetCore.Identity
 @using Gouro.WebApp.MVC.Extensions
-@inject IUser AppUser
+@inject IAspNetUser AppUser
 
 @if (AppUser.EstaAutenticado())
 {
