Ajustes no layout

--- a/src/web/Gouro.WebApp.MVC/Views/Carrinho/Index.cshtml
+++ b/src/web/Gouro.WebApp.MVC/Views/Carrinho/Index.cshtml
@@ -106,10 +106,10 @@
                             <div class="card-body">
                                 <form asp-action="AplicarVoucher">
                                     <div class="form-group">
-                                        <label>Possui um Voucher?</label>
+                                        <label>Possui um cupom?</label>
 
                                         <div class="input-group">
-                                            <input type="text" class="form-control" name="VoucherCodigo" id="VoucherCodigo" value="@Model.Voucher?.Codigo" placeholder="Voucher Desconto">
+                                            <input type="text" class="form-control" name="VoucherCodigo" id="VoucherCodigo" value="@Model.Voucher?.Codigo" placeholder="Cupom de Desconto">
                                             <span class="input-group-append">
                                                 <button type="submit" class="btn btn-primary">Aplicar</button>
                                             </span>
