--- a/src/web/Gouro.WebApp.MVC/Views/Catalogo/Index.cshtml
+++ b/src/web/Gouro.WebApp.MVC/Views/Catalogo/Index.cshtml
@@ -8,8 +8,8 @@
 <section>
     <div>
         <div style="background-image: url(images/banners/Template.jpg); height: 100%; background-position: center; background-repeat: no-repeat; background-size: cover">
-            <div style="text-align: center;">
-                <img src="~/images/banners/nerdstore.png" />
+            <div style="text-align: right; height: 300px; color: #e08039; padding: 100px 70px 0 0;">
+                <h1>Grupo Grão de Ouro</h1>
             </div>
         </div>
         <div class="container" style=" padding-top: 20px">
