Corrigir View de pedidos em andamento e concluídos

--- a/src/web/Gouro.WebApp.MVC/Views/Pedido/MeusPedidos.cshtml
+++ b/src/web/Gouro.WebApp.MVC/Views/Pedido/MeusPedidos.cshtml
@@ -41,7 +41,7 @@
                             <hr>
                             <ul class="row">
                                 @{
-                                    foreach (var item in pedido.PedidoItems)
+                                    foreach (var item in pedido.PedidoItens)
                                     {
                                         <li class="col-md-4">
                                             <figure class="itemside  mb-3">
