--- a/src/web/Gouro.WebApp.MVC/Views/Pedido/ConfirmacaoPedido.cshtml
+++ b/src/web/Gouro.WebApp.MVC/Views/Pedido/ConfirmacaoPedido.cshtml
@@ -11,7 +11,7 @@
         <vc:Summary></vc:Summary>
 
         @{
-            if (Model.PedidoItems.Any())
+            if (Model.PedidoItens.Any())
             {
                 <div class="card">
                     <div class="tracking-wrap">
@@ -40,7 +40,7 @@
                         </header>
                         <div class="row">
                             @{
-                                foreach (var item in Model.PedidoItems)
+                                foreach (var item in Model.PedidoItens)
                                 {
                                     <div class="col-md-6">
                                         <figure class="itemside  mb-3">
